--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
     <script src="script.js"></script>
     <script src="libraries/p5.min.js"></script>
     <script src="sketch.js"></script>
+    <script src="tree.js"></script>
+    <script src="node.js"></script>
 </body>
 </html>
