--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <h3 id="travsHeading">TRAVERSALS</h3>
 
                 <div class="travs">
-                    <span id="preTrav" onclick="preTravBtn()">Pre Order</span>
-                    <span id="inTrav" onclick="inTravBtn()">In Order</span>
-                    <span id="postTrav" onclick="postTravBtn()">Post Order</span>
+                    <span id="preTrav" onclick="tree.preTraverse()">Pre Order</span>
+                    <span id="inTrav" onclick="tree.inTraverse()">In Order</span>
+                    <span id="postTrav" onclick="tree.postTraverse()">Post Order</span>
                 </div>            
                 
                 <button type="submit" id="visualizeBtn">VISUALIZE !</button>
