Added Message Box

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tree Visualizer</title>
+    <title>AVL-Tree Visualizer</title>
 
     <!-- Links -->
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="tools-wrapper">
+        <div class="message">
+            Welcome !!
+        </div>
         <div class="items">
             <div id="tools">
                 <h1 id="toolsHeading">TOOLS</h1>
