--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="tools-wrapper">
         <div class="message">
-            Welcome !!
+            Welcome to AVL-Tree !!
         </div>
         <div class="items">
             <div id="tools">
