--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span id="postTrav" onclick="tree.postTraverse()">Post Order</span>
                 </div>            
                 
-                <button type="submit" id="visualizeBtn">VISUALIZE !</button>
+                <!-- <button type="submit" id="visualizeBtn">VISUALIZE !</button> -->
             </div>
         </div>
     </div>
