--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <button class="itemsBtn" id="deleteNode" onclick="del(13)">Delete Node</button>
             </div>
 
+            <div class="size">
+                <button id="inc">+</button>
+                <input id="szHead" placeholder="Size"></>
+                <button id="dec">-</button>
+            </div>
+
             <div class="tools1">
                 <h3 id="travsHeading">TRAVERSALS</h3>
 
@@ -44,7 +50,6 @@
     
     <div id="canvas"></div>
     
-    <script src="script.js"></script>
     <script src="libraries/p5.min.js"></script>
     <script src="sketch.js"></script>
     <script src="tree.js"></script>
